# docolint

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTEXT.md  Cargo.toml  Cross.toml  IMPLEMENTATION_PLAN.md  LICENSE  README.md  justfile  opencode.json  skills-lock.json
.agents/skills/jj/: REFERENCE.md  SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
crates/docolint/: ARCHITECTURE.md  Cargo.toml
crates/docolint-client/: ARCHITECTURE.md  Cargo.toml
crates/docolint-client/src/: lib.rs
crates/docolint-dictionary/: ARCHITECTURE.md  Cargo.toml
crates/docolint-dictionary/src/: lib.rs
crates/docolint-parser/: ARCHITECTURE.md  Cargo.toml
crates/docolint-parser/src/: comments.rs  csharp.rs  csharp_xml.rs  generic_comments.rs  lib.rs  rust_comments.rs
crates/docolint-server/: ARCHITECTURE.md  Cargo.toml
crates/docolint-server/src/: lib.rs
crates/docolint-server/tests/: integration.rs
crates/docolint-types/: ARCHITECTURE.md  Cargo.toml
crates/docolint-types/src/: lib.rs
crates/docolint/src/: main.rs
crates/docolint/tests/: integration.rs
crates/ltlsp/: Cargo.toml
crates/ltlsp-client/: Cargo.toml
crates/ltlsp-client/src/: lib.rs
crates/ltlsp-dictionary/: Cargo.toml
crates/ltlsp-dictionary/src/: lib.rs
crates/ltlsp-parser/: Cargo.toml
crates/ltlsp-parser/src/: lib.rs
crates/ltlsp-server/: Cargo.toml
crates/ltlsp-server/src/: lib.rs
crates/ltlsp-server/tests/: integration.rs
crates/ltlsp-types/: Cargo.toml
crates/ltlsp-types/src/: lib.rs
crates/ltlsp/src/: main.rs
crates/ltlsp/tests/: integration.rs
docs/: DIAGRAMS.md  HELIX.md  INSTALL.md  LANGUAGETOOL.md  NEOVIM.md  README.md  STANDARDS.md  SUPPORTED_LANGUAGES.md
docs/adr/: 0001-extended-language-support.md  0002-function-length-and-readability-refactor-policy.md  0003-container-runtime-startup-and-recovery.md
docs/handoff/: phase-10-step-1-parser-offset-characterization-tests.md  phase-10-step-2-parser-shared-comment-walker.md  phase-10-step-3-parser-stage-1-verification.md  phase-10-step-4-parser-offset-invariant-tests.md  phase-10-step-5-parser-offset-precision-implementation.md  phase-10-step-6-parser-stage-2-verification.md  phase-8-step-1-parser-red-tests.md  phase-8-step-2-parser-helper-extract.md  phase-8-step-3-server-red-tests.md  phase-8-step-4-server-request-handlers.md  phase-8-step-5-server-notification-handlers.md  phase-8-step-6-verification-graph.md
opencode-quota/: quota-toast.json
