[workspace]
members = ["crates/*"]
resolver = "2"
license = "MPL-2.0"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "form", "rustls", "http2", "system-proxy", "charset"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tree-sitter = "0.26.9"
