[package]
name = "docolint-client"
version = "0.1.0"
edition = "2024"
description = "HTTP client for the LanguageTool API"
license = "MPL-2.0"

[dependencies]
docolint-types = { path = "../docolint-types" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
