[package]
name = "docolint-client"
version = "0.1.4"
edition.workspace = true
description = "HTTP client for the LanguageTool API"
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories = ["development-tools"]
keywords = ["lsp", "languagetool", "http-client"]

[dependencies]
docolint-types = { path = "../docolint-types", version = "0.1.4" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
