[package]
name = "docolint-dictionary"
version = "0.1.0"
edition.workspace = true
description = "Hierarchical ignore-word dictionary for docolint"
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories = ["development-tools"]
keywords = ["lsp", "dictionary", "ignore-file"]

[dependencies]
docolint-types = { path = "../docolint-types", version = "0.1.0" }

[dev-dependencies]
tempfile = "3"
