[package]
name = "docolint-parser"
version = "0.1.0"
edition.workspace = true
description = "Tree-sitter based prose extraction from source code"
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories = ["development-tools"]
keywords = ["lsp", "tree-sitter", "prose-extraction"]

[dependencies]
docolint-types = { path = "../docolint-types", version = "0.1.0" }
tree-sitter = { workspace = true }
tree-sitter-rust = "0.24.2"
tree-sitter-html = "0.23.2"
tree-sitter-json = "0.24"
tree-sitter-md = { version = "0.5.3", features = ["parser"] }
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-typescript = "0.23.2"
tree-sitter-css = "0.25.0"
tree-sitter-lua = "0.5.0"
tree-sitter-bash = "0.25.1"
tree-sitter-powershell = "0.26.4"
tree-sitter-scss = "1.0.0"
tree-sitter-java = "0.23.5"
