[package]
name = "docolint-server"
version = "0.1.0"
edition = "2024"
description = "Core LSP server implementation for docolint"
license = "MPL-2.0"

[dependencies]
docolint-types = { path = "../docolint-types" }
docolint-client = { path = "../docolint-client" }
docolint-parser = { path = "../docolint-parser" }
docolint-dictionary = { path = "../docolint-dictionary" }
lsp-server = "0.7.9"
lsp-types = "0.97.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = "0.1"
crossbeam-channel = "0.5"
url = { version = "2.5", features = ["serde"] }
reqwest = { workspace = true, features = ["blocking"] }

[dev-dependencies]
wiremock = "0.6"
