[package]
name = "docolint-types"
version = "0.1.4"
edition.workspace = true
description = "Shared types for the docolint workspace"
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories = ["development-tools"]
keywords = ["lsp", "types", "grammar-checking"]

[dependencies]
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true }
