[package]
name = "docolint"
version = "0.1.0"
edition = "2024"
description = "LSP server for documentation and comment grammar/spell checking powered by LanguageTool"
license = "MPL-2.0"

[dependencies]
docolint-server = { path = "../docolint-server" }
lsp-server = "0.7.9"
lsp-types = "0.97.0"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-html = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24"
tree-sitter-md = { version = "0.5.3", features = ["parser"] }
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
wiremock = "0.6"
