[package]
name = "docolint"
version = "0.1.3"
edition.workspace = true
description = "LSP server for documentation and comment grammar/spell checking powered by LanguageTool"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories = ["development-tools", "command-line-utilities"]
keywords = ["lsp", "grammar", "spell-check", "languagetool"]

[dependencies]
docolint-server = { path = "../docolint-server", version = "0.1.3" }
lsp-server = "0.7.9"
lsp-types = "0.97.0"
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
