[package]
name = "ltlsp-client"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
ltlsp-types = { path = "../ltlsp-types" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
