[package]
name = "ltlsp"
version = "0.1.0"
edition = "2024"

[dependencies]
lsp-server = "0.7.9"
lsp-types = "0.97.0"
reqwest = { version = "0.13.3", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tree-sitter = "0.26.9"
tree-sitter-html = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24"
tree-sitter-md = { version = "0.5.3", features = ["parser"] }
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
wiremock = "0.6"
